[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nousen-pricing-agent"
version = "0.1.0"
description = "Pricing intelligence engine for Nousen Biotics"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Nousen Biotics AI" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
packages = ["pricing_agent"]
py-modules = ["bootstrap_arp"]
include-package-data = true
