[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nousen-pricing-agent"
version = "0.1.0"
description = "Pricing intelligence engine for Nousen Biotics"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Nousen Biotics AI" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
adk = ["fastapi>=0.109", "uvicorn[standard]>=0.23", "pydantic>=1.10"]

[tool.setuptools]
packages = ["pricing_agent"]
py-modules = ["bootstrap_arp", "serve_google_adk"]
include-package-data = true
